# ratex

./: .gitignore  .gitmodules  LICENSE  QUICKSTART.md  README.md  build_torch_mnm_libs.sh  lenet.py  mnm_native_functions.yaml  pytest.ini  raf_native_functions.yaml  setup.py
.github/workflows/: ci_entry.yml  ci_nightly.yml  ci_unit_test.yml  deploy_docker.yml  rebase_pt_nightly_compatible.yml  update_pt_nightly_compatible.yml  update_pytorch_nightly.yml  update_submodule.yml
ci/batch/: backup-ccache.sh  cli.sh  job-def-cfg.json  submit-job.py  task_python_distributed.sh  task_python_distributed_pt_1_11.sh
docker/: Dockerfile.ci_gpu  Dockerfile.dev  bash.sh  build.sh  push.sh
docker/batch/: entry.sh
docker/install/: build_ltc.sh  build_torch.sh  install_mkl.sh  ubuntu_install_apex.sh  ubuntu_install_core.sh  ubuntu_install_llvm.sh  ubuntu_install_python.sh  ubuntu_install_rmm.sh  ubuntu_install_torch.sh
docs/: Add-Operator.md  FSDP_example.py  QUICKSTART.md  grad_accumulation.md  lazy_tensor.md  lenet.py  logistics_zero1.py  overlap_trace_and_computation.md  zero_1.md
docs/dev/: ProfileAndDebug.md
patches/: apply_patch.sh
patches/torch_1.11/: razor.patch  torch.patch
ratex/: __init__.py  _lib.py  torch_parameter.py
ratex/amp/: __init__.py  autocast_model.py
ratex/core/: __init__.py  lazy_model.py
ratex/csrc/: aten_autograd_ops.cpp  aten_autograd_ops.h  aten_cpu_fallback.cpp  aten_cpu_fallback.h  aten_raf_bridge.cpp  aten_raf_type.cpp  init_python_bindings.cpp  raf_model_state.cpp  version.h
ratex/jit/: __init__.py  script.py
ratex/lazy_tensor_core/: __init__.py  _patched_functions.py  version.py
ratex/lazy_tensors/: permutation_util.cc  permutation_util.h  primitive_util.cc  shape_util.cc  shape_util.h  statusor.h  types.h
ratex/optimizer/: adam.py  optimizer.py  sgd.py
ratex/testing/: __init__.py  common.py
ratex/utils/: cache.py  utils.py
ratex/value/: registry.py
razor/: __init__.py  _lib.py  torch_parameter.py
razor/amp/: autocast_model.py
razor/core/: __init__.py  lazy_model.py
razor/csrc/: aten_autograd_ops.cpp  aten_cpu_fallback.cpp  aten_cpu_fallback.h  aten_mnm_bridge.cpp  aten_mnm_bridge.h  aten_mnm_type.cpp  aten_raf_bridge.cpp  aten_raf_bridge.h  aten_raf_type.cpp  init_python_bindings.cpp  mnm_model_state.cpp  mnm_model_state.h  raf_model_state.cpp  raf_model_state.h  value_registry.cpp  version.h
razor/jit/: script.py
razor/lazy_tensor_core/: __init__.py  _patched_functions.py  version.py
razor/lazy_tensors/: layout.h  layout_util.cc  layout_util.h  literal.cc  literal.h  literal_util.h  permutation_util.cc  permutation_util.h  primitive_types.h  primitive_util.cc  primitive_util.h  shape.cc  shape.h  shape_util.cc  shape_util.h  span.h  status.h  status_macros.h  statusor.h  types.h  util.h
razor/optimizer/: __init__.py  _functional.py  adam.py  lans.py  optimizer.py  sgd.py  utils.py
razor/testing/: common.py
razor/utils/: __init__.py  cache.py  utils.py
razor/value/: __init__.py  registry.py
scripts/: apply_patches.sh  build_ratex.sh  build_razor.sh  build_third_party.sh  build_torch.sh  build_torch_mnm.sh  cond_patch.py  generate_code.sh  pinned_torch_nightly.txt  setup_torch_version.sh  update_torch_nightly.sh
scripts/lint/: check-format.sh  check-license-header.py  check-lint.sh  git-black.sh  git-clang-format.sh  git-skip-testing.sh  pylintrc  run-clang-format.sh
sunda/: execute.py  model.py  runtime.py  wrap_neff_pass.py
test/cpp/: CMakeLists.txt  torch_mnm_test.h
tests/cpp/: cpp_test_util.cpp  (+2 more)
torch_mnm/: __init__.py  _lib.py  torch_parameter.py
torch_patches/: X10-codegen.diff
(+1066 files in other folders)
